src/ui/sonarr_ui/library/snapshots/managarr__ui__sonarr_ui__library__season_details_ui__season_details_ui_tests__tests__snapshot_tests__season_details_renders_DeleteEpisodeFilePrompt_0.snap
---
source: src/ui/sonarr_ui/library/season_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
             ╭  Season 1 Details  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               
             │ Episodes │ History │ Manual Search                                                                                                    │               
             │───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│               
             │   🏷     #      Title                                                          Air Date                  Size on Disk  Quality Profile │               
             │=> 🏷     1      Something cool                                                 2024-02-10 07:28:45 UTC   3.30 GB       Bluray-1080p    │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                     ╭────────────────────  Delete Episode  ─────────────────────╮                                     │               
             │                                     │        Do you really want to delete this episode:         │                                     │               
             │                                     │                      Something cool?                      │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │╭────────────────────────────╮╭───────────────────────────╮│                                     │               
             │                                     ││             Yes            ││            No             ││                                     │               
             │                                     │╰────────────────────────────╯╰───────────────────────────╯│                                     │               
             │                                     ╰───────────────────────────────────────────────────────────╯                                     │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
